welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:3: error: '=' expected but ';' found.
	var min= 999
^extrema:8: error: ';' expected but 'if' found.
		} if (min>num(k)){
                  ^