welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var max=-999
	var min= 999
	var n:Int=nums.length
	for (k <- 0 to n-1){
		if (max<nums(k)){
			max=nums(k)
		} if (min>num(k)){
			min=nums(k)
		}
	} 
	return max-min
}
